Add send, start test plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,6 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "queue": "cpp"
-    }
+    },
+    "sourcepawnLanguageServer.sourcemod_home": "/home/dreae/sm-ext-cryptosocket/sourcemod/plugins/include"
 }
