--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
-FROM fedora
+FROM fedora:28
 
-RUN dnf -y install gcc gcc-c++ cmake libsodium-static.i686 libsodium-devel boost-static.i686 boost-devel glibc-static.i686 libstdc++-static.i686 glibc-devel.i686
+RUN dnf -y install git gcc gcc-c++ make cmake libsodium-static.i686 libsodium-devel boost-static.i686 boost-devel glibc-static.i686 libstdc++-static.i686 glibc-devel.i686
