Simplify concurrency, switch to IETF AEAD constructs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,7 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "queue": "cpp"
-    },
-    "sourcepawnLanguageServer.sourcemod_home": "/home/dreae/sm-ext-cryptosocket/sourcemod/plugins/include"
+        "queue": "cpp",
+        "*.ipp": "cpp"
+    }
 }
