Use bat file for build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,7 @@ build:windows:
     tags: 
     - windows
     script:
-    - 'call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Professional\Common7\Tools\VsDevCmd.bat"'
-    - cmake -DTARGET=windows -DCMAKE_BUILD_TYPE=Release ..
-    - cmake --build . --config Release
+    - ../build.bat
     artifacts:
         paths:
         - build/cryptosocket.ext.dll
